@@ -1,3 +1,7 @@
+2007-11-26  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_fax3.c: fix leak of FAXCS state (per bug 1603).
+
 2007-11-23  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* configure.com, libtiff/tif_vms.c: Better OpenVMS support. Patches
